hphp/test/zend/good/Zend/tests/traits/property003.php.expectf
PRE-CLASS-GUARD

Fatal error: trait declaration of property 'hello' is incompatible with previous declaration in %s/property003.class.inc on line 3
